<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.web.annisa.studycase.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_header"
        android:textAlignment="center"
        android:textSize="14pt"
        android:id="@+id/textView_header"/>

    <TextView
        android:text="@string/textView_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:id="@+id/textView_heading"
        android:textAlignment="center"
        android:textSize="10pt"/>

    <EditText
        android:text=""
        android:hint="@string/editText_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp"
        android:id="@+id/editText_menu" />

    <EditText
        android:text=""
        android:hint="@string/editText_porsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_menu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/editText_porsi" />

    <Button
        android:text="@string/button_eatbus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_porsi"
        android:layout_marginTop="41dp"
        android:background="#DC143C"
        android:textColor="#ffffff"
        android:id="@+id/button_eatbus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button_abnormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#DC143C"
        android:textColor="#ffffff"
        android:id="@+id/button_abnormal"
        android:layout_alignBaseline="@+id/button_eatbus"
        android:layout_alignBottom="@+id/button_eatbus"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
