<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.web.annisa.studycase.SecondActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_header"
        android:textAlignment="center"
        android:textSize="14pt"
        android:id="@+id/textView_header2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:id="@+id/text_heading"
        android:textAlignment="center"
        android:textSize="10pt"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="UnknownId" />

    <TextView
        android:text="@string/text_menu"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:id="@+id/textViewMenu" />

    <TextView
        android:textAlignment="center"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:id="@+id/text_menu"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:text="@string/text_porsi"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewPorsi" />

    <TextView
        android:textAlignment="center"
        android:textSize="10pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPorsi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:id="@+id/text_porsi"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:text="@string/textView_harga"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_porsi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:id="@+id/textViewHarga" />

    <TextView
        android:textAlignment="center"
        android:textSize="12pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHarga"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:id="@+id/text_harga"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</RelativeLayout>
